Spring boot 4 (#479)
* Openrewrite upgrade

# Conflicts:
#	dialob-security-parent/dialob-security-spring/src/main/java/io/dialob/security/spring/oauth2/model/Group.java
#	dialob-security-parent/dialob-security-spring/src/main/java/io/dialob/security/spring/oauth2/model/Token.java

# Conflicts:
#	dialob-components/dialob-questionnaire-service/src/test/java/io/dialob/questionnaire/service/type/QuestionnaireDocumentTest.java

# Conflicts:
#	dialob-components/dialob-session-engine/src/main/java/io/dialob/session/engine/session/model/ItemState.java
#	dialob-components/dialob-session-engine/src/test/java/io/dialob/session/engine/program/expr/arith/LocalizedLabelOperatorTest.java

# Conflicts:
#	dialob-build-parent/pom.xml

# Conflicts:
#	dialob-components/dialob-questionnaire-service-sockjs/src/test/java/io/dialob/questionnaire/service/sockjs/QuestionnaireWebSocketHandlerTest.java

# Conflicts:
#	dialob-components/dialob-integration-api/src/main/java/io/dialob/integration/api/event/FormDeletedEvent.java
#	dialob-components/dialob-integration-api/src/main/java/io/dialob/integration/api/event/FormTaggedEvent.java
#	dialob-components/dialob-integration-api/src/main/java/io/dialob/integration/api/event/FormUpdatedEvent.java

# Conflicts:
#	dialob-api/src/main/java/io/dialob/api/form/Form.java
#	dialob-api/src/main/java/io/dialob/api/form/FormItem.java
#	dialob-api/src/main/java/io/dialob/api/form/FormPutResponse.java
#	dialob-api/src/main/java/io/dialob/api/form/FormTag.java
#	dialob-api/src/main/java/io/dialob/api/form/FormValidationError.java
#	dialob-api/src/main/java/io/dialob/api/form/FormValueSet.java
#	dialob-api/src/main/java/io/dialob/api/form/FormValueSetEntry.java
#	dialob-api/src/main/java/io/dialob/api/form/Validation.java
#	dialob-api/src/main/java/io/dialob/api/form/Variable.java
#	dialob-api/src/main/java/io/dialob/api/proto/Action.java
#	dialob-api/src/main/java/io/dialob/api/proto/ActionItem.java
#	dialob-api/src/main/java/io/dialob/api/proto/Actions.java
#	